istioify/httpbin/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.sdmkny.com"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
